# python_labs

./: .coverage  README.md  pyproject.toml  requirements.txt
data/lab04/: check.csv  input.txt  report.csv  report_per_file.csv  report_total.csv
data/lab08/: students_input.json  students_output.json
data/lab09/: students.csv
src/lab01/: 02_sum_avg.py  04_minutes_to_hhmm.py  05_initials_and_len.py  README.md  ex01.py
src/lab02/: README.md  arrays.py  matrix.py  tuples.py
src/lab03/: README.md  text_stats.py
src/lab04/: README.md  io_txt_csv.py  text_report.py
src/lab05/: README.md  csv_xlsx.py  json_csv.py
src/lab06/: README.md  cli_convert.py  cli_text.py
src/lab07/: README.md
src/lab08/: README.md  models.py  serialize.py
src/lab09/: README.md  group.py
src/lab10/: README.md  linked_list.py  structures.py
src/lib/: min_max_v_spiske.py  obedinenie_spiskov_v_odin.py  redakt_fio_group_gpu.py  sortirovka_s_udaleniem_povtorov_chisel.py  stroki_v_stolbci_matrici.py  summa_po_stolbcam_matrici.py  summa_po_strokam_matrici.py  text.py
tests/: test_json_csv.py  test_text.py
